On rare occasion, spinner wouldn't disappear

--- a/source/community.applications/usr/local/emhttp/plugins/community.applications/CommunityApps.page
+++ b/source/community.applications/usr/local/emhttp/plugins/community.applications/CommunityApps.page
@@ -719,6 +719,7 @@ function myCloseSpinner() {
 
 function myCloseAlert() {
 	swal.close();
+	$("div.spinner, .sweet-alert").hide();
 	swalBackground("<?=$swalBackground?>");
 	enableSearch();
 }
