Don't allow clicks on disabled categories

--- a/source/community.applications/usr/local/emhttp/plugins/community.applications/CommunityApps.page
+++ b/source/community.applications/usr/local/emhttp/plugins/community.applications/CommunityApps.page
@@ -292,6 +292,8 @@ $(function(){
 
 	$('.menuItems').on("click",'.categoryMenu',function() {
 		if ( popupVisible(this) ) return;
+		if ( $(this).hasClass("caMenuDisabled") )
+			return;
 		if ( $(this).hasClass("selectedMenu") ) {
 			if ( $(this).hasClass("caRepositoryMenu") ) {
 				return;
