--- a/source/community.applications/usr/local/emhttp/plugins/community.applications/CommunityApps.page
+++ b/source/community.applications/usr/local/emhttp/plugins/community.applications/CommunityApps.page
@@ -188,7 +188,7 @@ $(function(){
 	);
 
 // Override the OS switch language function so that CA can save it's current state when switching via the OS
-	$("#nav-item.LanguageButton").find("a").attr("onclick","CAswitchLanguage('<?=$previousLocale?>')");
+	$(".LanguageButton").find("a").attr("onclick","CAswitchLanguage('<?=$previousLocale?>')");
 
 	$("#title").append("<div class='searchArea onlyShowWithFeed'><span id='sortIconArea' style='display:none;'><i class='sortIcons fa fa-sort-alpha-asc enabledIcon ca_staticTips' title='<?tr("Sort By Name Ascending")?>' data-sortBy='Name' data-sortDir='Up'></i><i class='sortIcons fa fa-sort-alpha-desc ca_staticTips' title='<?tr("Sort By Name Descending")?>' data-sortBy='Name' data-sortDir='Down'></i><i class='sortIcons fa fa-sort-numeric-desc ca_staticTips' title='<?tr("Sort By Downloads")?>' data-sortBy='downloads' data-sortDir='Down'></i><i class='sortIcons fa fa-sort-amount-desc ca_staticTips' title='<?tr("Sort By Trend")?>' data-sortBy='trending' data-sortDir='Down'></i><i class='sortIcons fa fa-calendar ca_staticTips' title='<?tr("Sort By Date Added")?>' data-sortBy='FirstSeen' data-sortDir='Down'></i></span><span id='sortIcon' class='fa ca_toolsView disabledIcon'> <span class='fa-sort-alpha-asc'></span></span>&nbsp;<span id='searchFilter' class='status' style='margin-top:-1rem;'><input type='text' id='searchBox' placeholder='<?tr('Search')?>'><button class='searchSubmit' style='margin-right:10px' onclick='doSearch(true)'><i id='searchButton' class='fa fa-search fa-lg'></i></button></div>");
 
@@ -271,9 +271,42 @@ $(function(){
 		if ( popupVisible(this) ) return;
 		var container = $(this).attr("data-name");
 		var docker = [container];
-		openBox('/plugins/<?=$plugin?>/scripts/installMulti.php?upgrade=true&docker='+docker,"<?tr('Update Container')?>",600,900,true,"refreshDisplay");
+		execUpContainer(container);
 	});
-	
+function execUpContainer(container) {
+  var title = _('Updating the container')+': '+container;
+  var cmd = '/plugins/dynamix.docker.manager/include/CreateDocker.php?updateContainer=true&ct[]='+encodeURIComponent(container);
+  popupWithIframe(title, cmd, true, 'refreshDisplay');
+}
+function popupWithIframe(title, cmd, reload, func) {
+  pauseEvents();
+  $('#iframe-popup').html('<iframe id="myIframe" frameborder="0" scrolling="yes" width="100%" height="99%"></iframe>');
+  $('#iframe-popup').dialog({
+    autoOpen:true,
+    title:title,
+    draggable:true,
+    width:800,
+    height:((screen.height / 5) * 4) || 0,
+    resizable:true,
+    modal:true,
+    show:{effect:'fade', duration:250},
+    hide:{effect:'fade', duration:250},
+    open:function(ev, ui) {
+      $('#myIframe').attr('src', cmd);
+    },
+    close:function(event, ui) {
+      if (reload && !$('#myIframe').contents().find('#canvas').length) {
+        if (func) setTimeout(func+'()',0); else location = window.location.href;
+      } else {
+        resumeEvents();
+      }
+    }
+  });
+  $('.ui-dialog .ui-dialog-titlebar').addClass('menu');
+  $('.ui-dialog .ui-dialog-title').css('text-align', 'center').css('width', '100%');
+  $('.ui-dialog .ui-dialog-content').css('padding', '12');
+}
+
 	$('.mainArea').on("click",".ca_href",function() {
 		if ( popupVisible() ) return;
 		var href = $(this).attr("data-href");
